public class CircuitDeCourse {
    //équivalent du main -> instances de voitures 

}