public class Renault implements VoitureDuChampionnatDeFormuleUn{
    public void freiner(){
        //code pour faire freiner la ferrari
    }
    public void tourner(){
        //code pour faire tourner la ferrari
    }
    public void accelerer(){
        //code pour faire accélerer la ferrari
    }
}