public interface VoitureDuChampionnatDeFormuleUn {
    void freiner();
    void tourner();
    void accelerer();
}